# JofTmode

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  temp_app_gui.txt
components/application/: CMakeLists.txt
components/application/app_axis6/: app_axis6.c
components/application/app_axis6/include/: app_axis6.h
components/application/app_gps/: app_gps.c
components/application/app_gps/include/: app_gps.h
components/application/app_gui/: amoled_config.h  amoled_port.c  amoled_port.h  app_gui.c  app_touch.cpp
components/application/app_gui/assets/: wallpaper_image.c
components/application/app_gui/include/: wallpaper_image.h
components/application/app_power/: app_power.c
components/application/app_sdcard/: app_sdcard.c
components/application/app_sdcard/include/: app_sdcard.h
components/application/interface/axis6_interface/: axis6_interface.c
components/drivers/display_hal/: display_hal.c
components/drivers/display_hal/include/: display_hal.h
components/drivers/esp_lcd_qspi_amoled/: esp_lcd_qspi_amoled.c
components/drivers/esp_lcd_touch_chsc6417/: CMakeLists.txt
main/: CMakeLists.txt  fish.c  idf_component.yml  main_app.c
new_ screen ESP32-S3-Display_AMOLED_LVGL-V9/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
new_ screen ESP32-S3-Display_AMOLED_LVGL-V9/components/esp_lcd_qspi_amoled/: CMakeLists.txt  idf_component.yml
new_ screen ESP32-S3-Display_AMOLED_LVGL-V9/components/esp_lcd_qspi_amoled/include/: esp_lcd_qspi_amoled.h
new_ screen ESP32-S3-Display_AMOLED_LVGL-V9/components/esp_lcd_touch_chsc6417/: esp_lcd_touch_chsc6417.c
new_ screen ESP32-S3-Display_AMOLED_LVGL-V9/components/esp_lcd_touch_chsc6417/include/: esp_lcd_touch_chsc6417.h
new_ screen ESP32-S3-Display_AMOLED_LVGL-V9/main/: CMakeLists.txt  config.h  idf_component.yml  lvgl_init.h  main.c
